Simplify start scan request schema #728
