# deepfence_server/model/scans.go
@@ -6,8 +6,6 @@ type ScanTrigger struct {
 	NodeId       string                `json:"node_id" required:"true"`
 	ResourceId   string                `json:"resource_id" required:"true"`
 	ResourceType controls.ScanResource `json:"resource_type" required:"true"`
-	BinArgs      map[string]string     `json:"bin_args" required:"true"`
-	Hostname     string                `json:"hostname" required:"true"`
 }
 
 type ScanTriggerResp struct {
